fix go back interaction stuck behavior

--- a/styles.css
+++ b/styles.css
@@ -476,9 +476,6 @@ lite-youtube img {
     fill: white;
 }
 
-.close-modal:hover {
-    /* background: var(--accent-color-bright); */
-}
 
 .teachers-container {
     display: flex;
